force-app/main/default/objects/peer__Bank_Recon_Configuration__c/peer__Bank_Recon_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bank Statement Configuration</label>
</CustomObject>