force-app/main/default/objects/peer__Bank_Recon_Configuration__c/fields/peer__Auto_Create_Recon_Transaction__c.field-meta.xml
<CustomField>
    <fullName>peer__Auto_Create_Recon_Transaction__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Loan Payment &amp; Investor Fund transactions will be auto-created when the bank statement is parsed.</inlineHelpText>
    <label>Auto Create Transaction</label>
    <type>Checkbox</type>
</CustomField>