force-app/main/default/objects/peer__Bank_Recon_Configuration__c/fields/peer__Bank_Statement_Parser__c.field-meta.xml
<CustomField>
    <fullName>peer__Bank_Statement_Parser__c</fullName>
    <inlineHelpText>This class must implement the IBankStatementParser interface. It returns all the transactions present in a bank statement file in the form of a BTransaction.</inlineHelpText>
    <label>Bank Statement Parser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>