force-app/main/default/objects/peer__Bank_Recon_Configuration__c/fields/peer__Handle_Only_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>peer__Handle_Only_Exceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Checked, system only handles exception bank statement records &amp; ignores reconciled records.</inlineHelpText>
    <label>Handle Only Exceptions</label>
    <type>Checkbox</type>
</CustomField>