force-app/main/default/objects/peer__Bank_Recon_Configuration__c/fields/peer__Line_Separator__c.field-meta.xml
<CustomField>
    <fullName>peer__Line_Separator__c</fullName>
    <defaultValue>&quot;\r\n&quot;</defaultValue>
    <label>Line Separator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>