force-app/main/default/objects/peer__Bank_Recon_Configuration__c/fields/peer__Loan_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>peer__Loan_ID_Field__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <label>Loan ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>