force-app/main/default/objects/peer__Bank_Recon_Configuration__c/fields/peer__Lock_Period_for_Bank_Recon__c.field-meta.xml
<CustomField>
    <fullName>peer__Lock_Period_for_Bank_Recon__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lock Period for Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>